--- a/i18n/zh-TW.i18n.json
+++ b/i18n/zh-TW.i18n.json
@@ -264,5 +264,7 @@
 	"price-create":"創建新標價",
 	"card-prices-title": "更改該卡片上的標價",
 	"cardPricesPopup-title": "批價",
-	"card-edit-prices": "編輯批價"
+	"card-edit-prices": "編輯批價",
+    "toCount-card": "移至完成區"
+
 }
